<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Newsletter</string>
    <string name="top_headlines">Top headlines</string>
    <string name="articles_list">Articles list</string>
    <string name="articles">Articles</string>
    <string name="articles_avatar">Article illustration</string>
    <string name="articles_favorite">Article favorite button</string>
    <string name="sources">Sources</string>
    <string name="sources_list">Sources list</string>
    <string name="sources_item">Source</string>
    <string name="categories">Categories</string>
    <string name="categories_list">Categories list</string>
    <string name="categories_item">Category</string>
    <string name="countries">Countries</string>
    <string name="countries_list">Countries list</string>
    <string name="countries_item">Country</string>
    <string name="chips_item">Chip button</string>
    <string name="article_title">Article title</string>
    <string name="article_description">Article description</string>
    <string name="article_author">Article author</string>
    <string name="article_publishedAt">Article published at</string>
    <string name="article_urlToImage">Article URL to image</string>
    <string name="article_content">Article content</string>
    <string name="article_favorite">Article favorite</string>
    <string name="article">Article</string>
    <string name="favorite_list">Favorites list</string>
	
	    <!-- about_us.xml -->
    <string name="apropos_page">About us</string>
    <string name="team"><u>Team</u></string>
    <string name="coco"><a href="https://www.linkedin.com/in/corentinpoirier/">Corentin POIRIER</a></string>
    <string name="nico"><a href="https://www.linkedin.com/in/caon/">Nicolas CAO</a></string>
    <string name="vince"><a href="https://www.linkedin.com/in/vincent-guinaldo-805b531a1/">Vincent GUINALDO</a></string>
    <string name="link_repo_title">Repository link</string>
    <string name="link_repo"><a href="https://github.com/ncao98/NewsletterMBDS">NewsletterMBDS</a></string>
    <string name="libraries_title">External libraries</string>
    <string name="librarie1">Retrofit for HTTP requests</string>
    <string name="librarie2">SQLite for the internal database</string>
    <string name="functions_title">Features</string>
    <string name="function1">App homepage with consultation options (Source, Category, Country)</string>
    <string name="function1bis">Top headlines articles shown according to the device language</string>
    <string name="function2">Articles list according to the option selected</string>
    <string name="function3">Possibility to add article to a favorite list</string>
    <string name="function4">Texts translation according to the device language</string>

    <!-- menu bottom_nav_menu.xml -->
    <string name="title_article">Home</string>
    <string name="title_favorite">Favorites</string>
    <string name="title_aboutus">About us</string>
    <string name="function5">Support of Light/Dark mode</string>
    <string name="function6">Article details</string>
    <string name="article_url">URL article</string>
    <string name="query">Query</string>
    <string name="function7">Search bar</string>

</resources>