<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mbds.newsletter.fragments.MainFragment"
        android:label="@string/title_article"
        tools:layout="@layout/list_articles_fragment" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.mbds.newsletter.fragments.FavArticleListFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/list_favorite_fragment" />

    <fragment
        android:id="@+id/navigation_about_us"
        android:name="com.mbds.newsletter.fragments.AboutUsFragment"
        android:label="@string/title_aboutus"
        tools:layout="@layout/about_us_fragment" />
</navigation>